option java_package = "com.chuangyou.common.protobuf.pb.army";
option java_outer_classname = "ArmyInfoMsgProto";

import "player/PlayerInfoMsg.proto";
import "army/HeroInfoMsg.proto";
import "army/PetInfoMsg.proto";
message ArmyInfoMsg{
	optional PlayerInfoMsg heorAppearance =1; //角色外观信息
	optional HeroInfoMsg	heoBattleInfo=2;//角色战斗信息

	optional PetInfoMsg petBattleInfo = 3; // 宠物战斗属性
}

